1、功能串起来

--- a/src/main/resources/templates/match.html
+++ b/src/main/resources/templates/match.html
@@ -19,7 +19,7 @@
             <div class="layui-inline">
                 <div class="layui-input-inline"><input id="matchId" th:value="${matchId}" type="text" class="layui-input" placeholder="matchId"></div>
                 <div class="layui-input-inline"><input id="playerName" th:value="${playerName}" type="text" class="layui-input" placeholder="playerName"></div>
-                <button type="button" onclick="findMatchDetailByMatchIdAndPlayerName()" class="layui-btn layui-btn-primary"><i class="layui-icon layui-icon-search"></i> Search</button>
+                <button type="button" onclick="findMatchDetailByMatchIdAndPlayerName()" class="layui-btn layui-btn-normal"><i class="layui-icon layui-icon-search"></i> Search</button>
             </div>
         </div>
     </div>
