--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -19,17 +19,18 @@
 <div id="globalSpinner" class="loader center-screen top-level" style="display: none"></div>
 <div th:replace="header :: track"></div>
 
-<div class="container-fluid testtest">
-
-    <div class="row">
-        <!--参数输入-->
-        <form class="form-inline">
-            <div class="form-group">
-                <input type="text" class="form-control" th:value="${matchId}" id="matchIdInput1" placeholder="matchId">
+<div class="layui-row" style="margin: 20px">
+    <div class="layui-form">
+        <div class="layui-form-item">
+            <div class="layui-inline">
+                <div class="layui-input-inline"><input id="matchId" th:value="${matchId}" type="text" class="layui-input" placeholder="matchId"></div>
+                <button type="button" onclick="reloadTrackByMatchId()" class="layui-btn layui-btn-normal"><i class="layui-icon layui-icon-refresh"></i> Load</button>
             </div>
-            <div class="btn btn-primary" id="btnGetTrack">load</div>
-        </form>
+        </div>
     </div>
+</div>
+
+<div class="container-fluid testtest">
 
     <div class="row">
     </div>
@@ -67,34 +68,37 @@
     })
 
     $("#timeRange").val(0).attr("disabled", "true");
-    $("#btnGetTrack").click(() => {
-        const matchId = $("#matchIdInput1").val();
+
+    // 进入页面以后先执行一次载入
+    reloadTrackByMatchId();
+
+    function reloadTrackByMatchId(){
+        const matchId = $("#matchId").val();
         if (!matchId) {
             return;
         }
         $("#globalSpinner").css("display", "block");
 
         $.ajax({
-                url: baseUrl + "/position/track/" + matchId,
-                success: (e) => {
-                    console.log(e)
-                    trackData = e;
-                    $("#timeRange").attr("max", e.end).removeAttr("disabled").val(0);
-                    //载入地图
-                    pubgMap.setBackgroundMap(mapConstant.source[e.mapType], WIDTH, HEIGHT);
-                    //载入玩家列表
-                    const characters = [];
-                    for (let c in e.characters) {
-                        characters.push(e.characters[c]);
-                    }
-                    teamList.load(characters);
-                    drawInstantContent(0);
-
-                    $("#globalSpinner").css("display", "none");
+            url: baseUrl + "/position/track/" + matchId,
+            success: (e) => {
+                console.log(e)
+                trackData = e;
+                $("#timeRange").attr("max", e.end).removeAttr("disabled").val(0);
+                //载入地图
+                pubgMap.setBackgroundMap(mapConstant.source[e.mapType], WIDTH, HEIGHT);
+                //载入玩家列表
+                const characters = [];
+                for (let c in e.characters) {
+                    characters.push(e.characters[c]);
                 }
+                teamList.load(characters);
+                drawInstantContent(0);
+
+                $("#globalSpinner").css("display", "none");
             }
-        )
-    })
+        });
+    }
 
     //拖动事件
     $("#timeRange").on("input", (e) => {
