存活时间格式化

--- a/src/main/resources/templates/match.html
+++ b/src/main/resources/templates/match.html
@@ -90,7 +90,7 @@
         ,"heals":"治疗次数"
         ,"roadKills":"撞死人数"
         ,"deathType":"死亡原因"
-        ,"timeSurvived":"存活时间"
+        ,"timeSurvivedStr":"存活时间"
         ,"walkDistance":"跑步距离"
         ,"rideDistance":"驾车距离"
         ,"swimDistance":"游泳距离"
