--- a/src/main/resources/templates/match.html
+++ b/src/main/resources/templates/match.html
@@ -87,7 +87,7 @@
         ,"assists":"助攻"
         ,"killStreaks":"连杀"
         ,"revives":"复活队友"
-        ,"teamKills":"击杀队友"
+        ,"teamKills":"误杀队友"
         ,"heals":"治疗次数"
         ,"roadKills":"撞死人数"
         ,"deathType":"死亡原因"
