--- a/src/main/resources/templates/track.html
+++ b/src/main/resources/templates/track.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>位置追踪</title>
+    <link rel="icon" href="img/icon/icon.jpg">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/player-list.css">
     <link rel="stylesheet" href="css/loader.css">
@@ -12,6 +13,7 @@
     <script src="js/util/PubgMap.js"></script>
     <script src="js/util/TeamList.js"></script>
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="css/common.css">
     <script src="layui/layui.js"></script>
 
 </head>
@@ -55,6 +57,8 @@
 
 </div>
 
+
+<div th:replace="footer :: stretched"></div>
 </body>
 <script>
     const WIDTH = 800;
