--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>对局列表</title>
     <link rel="icon" href="img/icon/icon.jpg">
     <link rel="stylesheet" href="layui/css/layui.css">
+    <link rel="stylesheet" href="css/common.css">
     <script src="js/lib/jquery-3.5.1.min.js"></script>
     <script src="layui/layui.js"></script>
 </head>
@@ -12,7 +13,7 @@
 
 <div th:replace="header :: list"></div>
 <table id="match" class="layui-table-hover"></table>
-
+<div th:replace="footer :: fixed"></div>
 </body>
 <script>
     var matchTable;
